--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   cloud_firestore: ^0.14.4
   provider: ^4.3.2+3
   firebase_auth: ^0.18.4+1
+  pinput: ^0.2.6
+  sms_autofill: ^1.2.7
 
 dev_dependencies:
   flutter_test:
@@ -49,9 +51,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/purple.jpg
+    - assets/night.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
